Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138504

Crash on Integer Overflow in QCheckedInt Operator+ (ASSERT in qcheckedint_impl.h:69)

XMLWordPrintable

    • macOS
    • 02f5cc7ed (dev), a4233b968 (6.10)

      MacOS 15.4.1

      Qt Creator 17.0.0

      Qt 6.10 beta 2

      Steps to reproduce:

      1. Open Qt Creator's example tab and select https://doc.qt.io/qt-6/qtcore-threads-mandelbrot-example.html example from Qt Core.
      2. Run the application. 
      3. Maximize the windows then zoom in and out several times using scroll (I use MX Master mouse with infitnite scroll which makes it easy to reproduce).

      Expected: I should be able to zoom in/out without any problems. 

      Actual: The app crashes. 

      ASSERT failure in QCheckedInt<Int, Impl, FailureReportPolicy> QtPrivate::QCheckedIntegers::operator+(QCheckedInt<Int, Impl, FailureReportPolicy>, QCheckedInt<Int, Impl, FailureReportPolicy>): "Overflow in operator+", file /Users/lukaszkosiorowski/Qt/6.10.0/macos/lib/QtCore.framework/Headers/qcheckedint_impl.h, line 69 

      NOTE: The app does not crash on Qt 6.9.2

        1. crash_report_qt_core.txt
          50 kB
          Łukasz Kosiorowski
        For Gerrit Dashboard: QTBUG-138504
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            lkos Łukasz Kosiorowski
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes