Examples: don't overflow a QRect with adjusted()

Required after 1145e1709d1072f7dd45683e9c25a14615603854 made QRect use
QCheckedInt. We can avoid this by simply using QRectF one step earlier
in the calculation, which a) expands the range from ±2^31 to ±2^53 and
b) neatly avoids infinite zooming by not doing anything after 2^53
(because 2^53 + 1 = 2^53).

Fixes: QTBUG-138504
Change-Id: Ibe382ad9b98bbfb9fde6fffd94bd733a4b999852
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
(cherry picked from commit 02f5cc7ed218e663dd2da6388f7ef1504cd7cfef)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>